<resources>
    <string name="app_name">Sign Quiz Application</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="submit">Submit</string>
    <string name="total_questions">Total Questions:</string>
    <string name="answer_a">Answer A</string>
    <string name="what_s_the_name_of_this_sign">What\'s the name of this sign?</string>
</resources>