<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:padding="25dp"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            android:src="@drawable/stop"
            android:layout_above="@+id/question"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question"
            android:text="@string/what_s_the_name_of_this_sign"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_above="@id/choices_layout"
            android:textAlignment="center"
            android:layout_margin="20dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choices_layout"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answerA_btn"
                android:layout_margin="5dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/answer_a"
                android:textColor="@color/black"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answerB_btn"
                android:layout_margin="5dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/answer_b"
                android:textColor="@color/black"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answerC_btn"
                android:layout_margin="5dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/answer_c"
                android:textColor="@color/black"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answerD_btn"
                android:layout_margin="5dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/answer_d"
                android:textColor="@color/black"/>

    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_btn"
            android:text="@string/submit"
            android:layout_below="@id/choices_layout"
            android:layout_margin="40dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/total_questions"
            android:text="@string/total_questions"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_below="@id/submit_btn"
            android:layout_margin="30dp"/>

</RelativeLayout>